<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2015, Thomas Schreiner, thomas1.schreiner@googlemail.com
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this
  ~    list of conditions and the following disclaimer.
  ~ 2. Redistributions in binary form must reproduce the above copyright notice,
  ~    this list of conditions and the following disclaimer in the documentation
  ~    and/or other materials provided with the distribution.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
  ~ ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  ~ WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
  ~ ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
  ~ (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
  ~ LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
  ~ ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  ~ (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  ~ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  ~
  ~ The views and conclusions contained in the software and documentation are those
  ~ of the authors and should not be interpreted as representing official policies,
  ~ either expressed or implied, of the FreeBSD Project.
  -->

<resources>

    <string name="app_name">FrInMeAn</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_signup">Anmelden</string>
    <string name="chatname">Chatnamen angeben</string>
    <string name="action_searchuser">Benutzer suchen</string>
    <string name="action_sendcamera">Kamerabild senden</string>
    <string name="action_sendpicture">Gallerieelment senden</string>
    <string name="action_sendvideo">Video senden</string>
    <string name="action_sendlocation">Standort senden</string>
    <string name="action_sendfile">Datei senden</string>
    <string name="action_sendcontact">Kontakt senden</string>
    <string name="action_setusericon">Setze Benutzer Icon</string>
    <string name="action_setchaticon">Setze Chat Icon</string>
    <string name="option_adduser">Benutzer hinzufügen</string>
    <string name="option_removeuser">Benutzer entfernen</string>
    <string name="option_leave_chat">Chat verlassen</string>
    <string name="option_deletechat">Chat löschen</string>
    <string name="option_createchat">Chat erzeugen</string>
    <string name="option_refresh">Neu laden</string>
    <string name="option_syncuser">Sync Benutzer</string>
    <string name="title_activity_chat">Chats</string>
    <string name="no_chats">Keine Chats vorhanden</string>
    <string name="no_users">Keine Benutzer vorhanden</string>
    <string name="username">Benutzername </string>
    <string name="password">Passwort</string>
    <string name="password_again">Passwort erneut</string>
    <string name="email">Email Adresse</string>
    <string name="sign_up">Anmelden</string>
    <string name="fetch_chats">Lade Chats</string>
    <string name="cancel">Abbrechen</string>
    <string name="OK">OK</string>
    <string name="no_server_given">Keine Server in den Einstellungen vorhanden!</string>
    <string name="no_user_or_password_given">Kein Benutzer oder Passwort angegeben, bitte anmelden!</string>
    <string name="user_added_to_chat">Benutzer wurde dem Chat hinzugefügt.</string>
    <string name="signup_type_same_password_in_password_fields">Passwörter stimmen nicht überein!</string>
    <string name="signup_fill_all_fields">Es müssen alle Felder für den SignUp ausgefüllt werden!</string>
    <string name="signup_user_already_exists_saved">Der Benutzer existiert bereits, wird aber für spätere Authentizifzierung gespeichert!</string>
    <string name="user_icon_set">Benutzer Icon gesetzt.</string>
    <string name="not_connected_to_service">Keine Verbindung zum Hintergrund Service</string>
    <string name="not_connected_to_network">Keine Internet Verbindung</string>
    <string name="DirecotryChooser">Ablageort auswählen</string>
    <string name="SelectOwnImage">Eigenes Bild auswählen</string>
    <string name="message_option">Nachrichten Optionen</string>
    <string name="delete">Löschen</string>
    <string name="delete_options">Lösch-Optionen</string>
    <string name="delete_on_server">Auf dem Server löschen</string>
    <string name="delete_local_content">Lokalen Inhalt löschen</string>
    <string name="chat_delete">Chat gelöscht</string>

    <!-- String for ErrorText FROM SERVER -->
    <string name="ERROR_NO_CONNECTION_TO_SERVER">Keine Verbindung zum Server!</string>
    <string name="ERROR_USER_AUTHENTICATION_FAILED">Authentisierung fehlgeschlagen!</string>
    <string name="ERROR_NONE_EXISTING_USER">Benutzer exisitert nicht!</string>
    <string name="ERROR_NONE_EXISTING_CHAT">Chat existiert nicht!</string>
    <string name="ERROR_NO_TEXTMESSAGE_GIVEN">Keine Textnachricht übergeben!</string>
    <string name="ERROR_INVALID_MESSAGE_TYPE">Ungültiger Nachrichten-Typ!</string>
    <string name="ERROR_INVALID_EMAIL_ADRESS">Ungültige Email-Adresse!</string>
    <string name="ERROR_MISSING_CHATNAME">Chatname fehlt!</string>
    <string name="ERROR_NONE_EXISTING_TEXT_MESSAGE">Text Nachricht existiert nicht!</string>
    <string name="ERROR_DATABASE_ERROR">Ein Datenbankfehler ist aufgetrete, bitte überprüfen Sie den Server!</string>
    <string name="ERROR_NONE_EXISTING_MESSAGE">Nachricht existiert nicht!</string>
    <string name="ERROR_USER_NOT_ACTIVE">User ist nicht aktiv!</string>
    <string name="ERROR_WRONG_PASSWORD">Passwort nicht korrekt!</string>
    <string name="ERROR_NO_USERNAME_OR_PASSWORD">Benutzername oder Passwort fehlt!</string>
    <string name="ERROR_USER_ALREADY_EXISTS">Benutzer ist bereits vorhanden!</string>
    <string name="ERROR_NO_ACTIVE_CHATS">Keine aktiven Chats vorhanden!</string>
    <string name="ERROR_FILE_NOT_FOUND">Datei existiert auf dem Server nicht!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_single_chat">SingleChatActivity</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="title_tab_chat">Aktive Chats</string>
    <string name="title_tab_user">Bekannte Benutzer</string>
    <string name="title_restore_dialog">Nachrichten vom Server wiederherstellen?</string>
    <string name="timeinformation">Zeit-Informationen</string>
    <string name="notread">Heruntergeladen : Noch nicht heruntergeladen</string>
    <string name="notshow">Angezeigt : Noch nicht angezeigt</string>
    <string name="read">Heruntergeladen : </string>
    <string name="show">Angezeigt : </string>
    <string name="pref_title_HTTP_communication">Sicherheit</string>
    <string name="pref_title_contextroot">Context Root URL</string>
    <string name="pref_default_contextroot">frinmeba</string>
    <string name="send">Gesendet :</string>
    <string name="title_activity_chat_user"><![CDATA[Chats & Benutzer]]></string>
    <string name="pref_title_content_communication">Bilder/Video im WLAN</string>
    <string name="pref_title_timeinformation">Sync Time Information</string>
    <string name="pref_title_timeinformation_always">Immer</string>
    <string name="pref_title_timeinformation_wifi_only">WLAN</string>
    <string name="pref_title_content_wifi_only">WLAN</string>
    <string name="pref_title_content_always">Immer</string>
</resources>
