<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_show_popup"
        android:icon="@drawable/ic_action_attachment"
        android:orderInCategory="100"
        android:title=""
        yourapp:showAsAction="always" />
    <item
        android:id="@+id/option_adduser"
        android:orderInCategory="600"
        android:title="@string/option_adduser"
        yourapp:showAsAction="never" />
    <item
        android:id="@+id/option_removeuser"
        android:orderInCategory="700"
        android:title="@string/option_removeuser"
        yourapp:showAsAction="never" />
    <item
        android:id="@+id/option_deletechat"
        android:orderInCategory="800"
        android:title="@string/option_deletechat"
        yourapp:showAsAction="never" />
</menu>
